2008-09-03  Yvan Vanhullebus  <vanhu@netasq.com>
	From Tomas Mraz <tmraz@redhat.com>:
	* src/racoon/pfkey.c: Duplicate addresses in pk_sendxxx functions, as
	  they may be altered for NAT-T stuff.

2008-09-03  Timo Teras  <timo.teras@iki.fi>
	* src/libipsec/pfkey.c: no satype check for Linux spdflush messages
	* src/racoon/pfkey.c: handle SPD dump responses in pfkey_reload()
	  to make configuration reloading work better
	* src/racoon/sockmisc.c: it is not an error to call extract_port()
	  with AF_UNSPEC address (happens with anonymous config blocks)

2008-08-12  Yvan Vanhullebus  <vanhu@netasq.com>
	From Krzysztof Oledzki <olel@ans.pl>:
	* src/racoon/isakmp.c: Remove ph1handler if we received an invalid
	  first exchange from initiator.

2008-08-06  Timo Teras  <timo.teras@iki.fi>
	From Krzysztof Piotr Oledzki <olel@ans.pl>:
	* src/racoon/{privsep.c|session.c|session.h}: make privileged
	  process exit if unprivileged process is terminated, spelling fixes

2008-07-23  Matthew Grooms
	* src/racoon/cfparse.y
	  src/racoon/session.c : add missing ifdefs for non-radius builds

2008-07-23  Timo Teras  <timo.teras@iki.fi>
	* src/libipsec/Makefile.am
	  src/racoon/Makefile.am
	  src/setkey/Makefile.am : do not remove flex/bison generated files
	  in distclean, also add the generated header file as BUILT_SOURCES
	  and use the standard autotools rule for generating them
	* src/racoon/Makefile.am : do not use GNU make specific extension

2008-07-22  Yvan Vanhullebus  <vanhu@netasq.com>
	From Kohki Ohhira <ohhira@src.ricoh.co.jp>:
	* src/racoon/proposal.c: fixed some memory leaks, when malloc
	  fails or when peer sends invalid proposals.

2008-07-21  Matthew Grooms
	* src/racoon/cfparse.y
	  src/racoon/cftoken.l
	  src/racoon/isakmp_cfg.c
	  src/racoon/isakmp_xauth.c
	  src/racoon/isakmp_xauth.h
	  src/racoon/main.c
	  src/racoon/racoon.conf.5
	  src/racoon/session.c : add radius config options for racoon.conf

src/racoon/isakmp_cfg.c : fix hybrid enabled builds
